<?xml version="1.0"?>
<package format="3">
  <name>simple_package</name>
  <version>0.1.0</version>
  <description>Simple package for ROS 2 tutorial.</description>

  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
